[package]
name = "lazy-keymap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] }
svg = "0.17.0"
toml = "0.8.13"
